error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
/home/haris/celestial-nav/src/star_matching.cpp: In member function ‘std::vector<std::pair<Star, ReferenceStarData> > StarMatching::matchStars(const std::vector<Star>&)’:
/home/haris/celestial-nav/src/star_matching.cpp:13:23: error: ‘matchingThreshold’ was not declared in this scope; did you mean ‘setMatchingThreshold’?
   13 |         if (maxVote > matchingThreshold) {
      |                       ^~~~~~~~~~~~~~~~~
      |                       setMatchingThreshold
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:132: CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 